force-app/main/default/objects/LeanData__Campaign_Opportunity__c/LeanData__Campaign_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Campaign Opportunity</label>
    <nameField>
        <displayFormat>CO-{000000000}</displayFormat>
        <label>Campaign_Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>