force-app/main/default/objects/LeanData__Campaign_Opportunity__c/fields/LeanData__Campaign_Attribution__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Campaign_Attribution__c</fullName>
    <formula>LeanData__Attribution_Value__c *  LeanData__Campaign_Attribution_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Attribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>