force-app/main/default/objects/LeanData__Campaign_Opportunity__c/fields/LeanData__Days_To_Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Days_To_Opportunity_Created__c</fullName>
    <formula>DATEVALUE(LeanData__Opportunity__r.CreatedDate) -  LeanData__Campaign_Member_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Opportunity Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>