force-app/main/default/objects/LeanData__Campaign_Opportunity__c/fields/LeanData__Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Opportunity_Stage__c</fullName>
    <externalId>true</externalId>
    <label>Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>