force-app/main/default/objects/LeanData__Campaign_Opportunity__c/fields/LeanData__Opportunity_Stage_Index__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Opportunity_Stage_Index__c</fullName>
    <description>The index of the Opportunity Stage at the time of this touch occuring. I.e. 4 = The 4th status the Opportunity was in.</description>
    <externalId>true</externalId>
    <label>Opportunity Stage Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>