force-app/main/default/objects/LeanData__Campaign_Opportunity__c/fields/LeanData__Priority__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Priority__c</fullName>
    <label>Priority ( Deprecated )</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>