force-app/main/default/objects/LeanData__Campaign_Opportunity__c/fields/LeanData__Responded__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Responded</label>
    <type>Checkbox</type>
</CustomField>