force-app/main/default/objects/LeanData__Campaign_Opportunity__c/fields/LeanData__Touch_Order__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Touch_Order__c</fullName>
    <label>Touch Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
            <value>
                <fullName>Post-Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>